--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -75,6 +75,13 @@
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
+		<activity android:name="ServTest">
+			<intent-filter>
+				<action android:name="com.burningman.ServTest"></action>
+				<category android:name="android.intent.category.DEFAULT"></category>
+			</intent-filter>
+		</activity>
+		<service android:name="com.burningman.services.HttpLocalServiceBinding"></service>
 	</application>
 	<uses-sdk android:minSdkVersion="5"/>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
